# Servier-data-pipeline

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  justfile  pyproject.toml
.github/workflows/: release.yaml
servier_data_pipeline/: .env  .pylintrc  config.py  main.py
servier_data_pipeline/data/output/: output1.json  output2.json
servier_data_pipeline/notebooks/: drugs-data-pipeline.ipynb  sql-test-solutions.ipynb
servier_data_pipeline/processing/: preprocess_clinical.py  preprocess_drugs.py  preprocess_pubmed.py  utils.py
servier_data_pipeline/utils/: bigquery_helper.py  data_loader.py  logging_config.py  models.py
